# oxutils

./: .env.test.example  CHANGELOG.md  CONTRIBUTING.md  COPYRIGHT  LICENSE  MANIFEST.in  MIGRATIONS.md  Makefile  PUBLISHING.md  README.md  SECURITY.md  conftest.py  make_migrations.py  pyproject.toml
.github/workflows/: publish.yml  tests.yml
docs/: audit.md  auth.md  celery.md  currency.md  enums.md  jwt.md  jwt_middleware.md  jwt_security.md  logger.md  misc.md  mixins.md  oxiliere.md  pdf.md  permissions.md  s3.md  settings.md  testing.md
examples/: README.md  audit_usage.py  basic_setup.py  jwt_auth.py  s3_storage.py
examples/myproject/: .gitignore  README.md  pyproject.toml
examples/myproject/myproject/: settings.py  urls.py
examples/myproject/pdfapp/: admin.py  models.py  pdf_helpers.py  urls.py  views.py
examples/myproject/pdfapp/migrations/: 0001_initial.py
examples/myproject/pdfapp/static/css/: pdf_style.css
examples/myproject/pdfapp/templates/pdfapp/: profile_detail.html  profile_list.html  profile_pdf.html
src/oxutils/: __init__.py  apps.py  conf.py  constants.py  exceptions.py  pdf.py  s3.py  settings.py
tests/: README.md  conftest.py  pytest.ini  settings.py  test_conf.py  test_currency.py  test_enums.py  test_exceptions.py  test_functions.py  test_jwt.py  test_jwt_tokens.py  test_mixins.py  test_oxiliere.py  test_oxiliere_permissions.py  test_pdf.py  test_s3.py  test_settings.py
tests/auth/: conftest.py  test_adapter.py  test_app_settings.py  test_apps.py  test_constants.py  test_emails.py  test_exceptions.py  test_mfa.py  test_mixins.py  (+7 more)
(+137 files in other folders)
